# CVUI

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: cvui.h  puzzlemaker.h
include/image_processing/: base.h  bilateral_filtering.h  border.h  canny.h  framing.h  interpolation.h  kmeans.h  morphological_operations.h  normalization.h  segmentation.h  spatial_filtering.h  spatial_filtering.hpp  utils.h  zone_utils.h
include/image_processing/object_detection/: blob_detection.h
include/image_processing/segmentation/: similitude.h
include/pipeline/: configuration.h  context.h  processor.h
include/pipeline/image_processing/: bilateral_filtering.h  border_processor.h  canny_processor.h  color_processor.h  framing_processor.h  kmeans_processor.h  morphological_processor.h  normalization_processor.h  resizing_processor.h  spatial_filtering.h  spatial_filtering.hpp
include/pipeline/image_processing/complex/: crestline_detector.h
include/pipeline/image_processing/object_detection/: blob_extractor.h
include/pipeline/image_processing/segmentation/: similitude_processor.h
include/ui/: constants.h  property.h  property_manager.h
include/utils/: constants.h  context.h  contextbase.h  math.h  matrix.h  pixbuf.h
include/utils/rtl/: LMedS.hpp  Line.hpp  MLESAC.hpp  MSAC.hpp  RANSAC.hpp
src/: cvui.cpp  main.cpp  puzzlemaker.cpp
src/image_processing/: bilateral_filtering.cpp  border.cpp  canny.cpp  framing.cpp  interpolation.cpp  kmeans.cpp  morphological_operations.cpp  normalization.cpp  segmentation.cpp  spatial_filtering.cpp  utils.cpp  zone_utils.cpp
src/image_processing/object_detection/: blob_detection.cpp
src/image_processing/segmentation/: similitude.cpp
src/pipeline/: configuration.cpp  context.cpp
src/pipeline/image_processing/: bilateral_filtering.cpp  border_processor.cpp  canny_processor.cpp  color_processor.cpp  framing_processor.cpp  kmeans_processor.cpp  morphological_processor.cpp  normalization_processor.cpp  resizing_processor.cpp  spatial_filtering.cpp
src/pipeline/image_processing/complex/: crestline_detector.cpp
src/pipeline/image_processing/object_detection/: blob_extractor.cpp
src/pipeline/image_processing/segmentation/: similitude_processor.cpp
src/ui/: property.cpp  property_manager.cpp
src/utils/: context.cpp  math.cpp  pixbuf.cpp
